# silicon

./: .clang-format  .clang-tidy  .clangd  .dir-config.el  .gitattributes  .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  flake.nix  shell.nix  vcpkg.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  check-format.yml  clear-cache.yml  pr-compliance.yml
ci/: format-code.py  git-clang-format
cmake/: resources.cmake  vcpkg.cmake  windows.cmake
hooks/: pre-commit
libfst/: CMakeLists.txt
resources/app/licenses/: LIBFST_MIT.txt  LZ4_BSD.txt  QT_GPL.txt
src/: arithmetic.cpp  arithmetic.h  arithmetic.hpp  component.cpp  component.hpp  components.hpp  gates.cpp  gates.hpp  io.cpp  io.hpp  main.cpp  wire.cpp  wire.hpp
src/core/: component.cpp  component.hpp  gates.cpp  gates.hpp  wire.cpp  wire.hpp
src/extraComponents/: arithmetic.cpp  arithmetic.hpp  utils.cpp  utils.hpp
src/ui/: diagramScene.cpp  diagramScene.hpp  diagramView.cpp  diagramView.hpp  logiFlowWindow.cpp  logiFlowWindow.hpp
src/ui/common/: aboutDialog.cpp  aboutDialog.hpp  componentSearchBox.cpp  componentSearchBox.hpp  diagramScene.cpp  diagramScene.hpp  diagramView.cpp  diagramView.hpp  enums.hpp  graphicalComponent.cpp  graphicalComponent.hpp  graphicalWire.cpp  graphicalWire.hpp  icons.cpp  icons.hpp  textItem.cpp  textItem.hpp
src/ui/components/: graphicalComponent.cpp  graphicalComponent.hpp  graphicalGates.cpp  graphicalGates.hpp
src/ui/logiFlow/: logiFlowWindow.cpp  logiFlowWindow.hpp
src/ui/logiFlow/components/: graphicalComponent.cpp  graphicalComponent.hpp  graphicalGates.cpp  graphicalGates.hpp  graphicalIO.cpp  graphicalIO.hpp  graphicalLogicComponent.cpp  graphicalLogicComponent.hpp  graphicalUtils.cpp  graphicalUtils.hpp
src/utils/: ranges_wrapper.h  ranges_wrapper.hpp
tests/: CMakeLists.txt  arithmetic.cpp  fstlib.cpp  logic.cpp  tests.hpp  utils.cpp
